# FutureSight-Apollo

./: .env.example  Procfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: router.py
app/api/v1/: routes_chat.py  routes_reviews.py
app/core/: exceptions.py  logging.py  settings.py
app/prompts/: chat_csv_context_prompt.py  csv_summary_prompt.py  system_prompt.py
app/schemas/: chat.py  llm.py  reviews.py
app/services/: chat_service.py  csv_service.py  csv_store_service.py  llm_summary_service.py  openai_client.py  playwright_scraper_service.py  scraper_service.py  summarizer_service.py
data/csv_store/: csv_2e1a1aff9e67486598000c3eaf1e4b07.csv  index.json
tests/: test_chat_api.py  test_reviews_api.py
